<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_username"
            android:inputType="text"
            android:maxLength="30"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/label_fecha_nac"
    android:id="@+id/fecha_nac"
    app:layout_constraintTop_toBottomOf="@id/form_username"
    app:layout_constraintLeft_toLeftOf="@id/form_username"
    />

    <DatePicker
        android:id="@+id/form_datePicker"
        android:layout_width="240dp"
        android:layout_height="150dp"

        android:calendarViewShown="false"
        android:datePickerMode="spinner"

        android:spinnersShown="true"

        app:layout_constraintTop_toBottomOf="@id/fecha_nac"
        app:layout_constraintLeft_toLeftOf="@id/form_username"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/form_datePicker">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_telefono"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/form_telefono">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_email"

            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/form_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/form_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_descripcion"
            android:maxLength="150"
            android:maxLines="3" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/form_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="160dp" />


</androidx.constraintlayout.widget.ConstraintLayout>